force-app/main/default/objects/Quote/fields/Ops_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Ops_Contact_Email__c</fullName>
    <formula>Ops_Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ops Contact Email</label>
    <type>Text</type>
</CustomField>