force-app/main/default/objects/Quote/fields/Order_Contact__c.field-meta.xml
<CustomField>
    <fullName>Order_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.QuoteAccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes (Order Contact)</relationshipLabel>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>