force-app/main/default/objects/Quote/fields/Order_Terms__c.field-meta.xml
<CustomField>
    <fullName>Order_Terms__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Terms &amp; Conditions</label>
    <referenceTo>Special_Instruction__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>