force-app/main/default/objects/Quote/fields/Original_Order__c.field-meta.xml
<CustomField>
    <fullName>Original_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>For Change Order quotes: references the original active Order being amended. Populated automatically by the Change Order Creator.</description>
    <inlineHelpText>The original Order this Change Order amends. Set automatically.</inlineHelpText>
    <label>Original Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Change Order Quotes</relationshipLabel>
    <relationshipName>Change_Order_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>