force-app/main/default/objects/Quote/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Days</fullName>
            </value>
            <value>
                <fullName>End of Current Month</fullName>
            </value>
            <value>
                <fullName>45 Days</fullName>
            </value>
            <value>
                <fullName>50 Days</fullName>
            </value>
            <value>
                <fullName>60 Days</fullName>
            </value>
            <value>
                <fullName>End of Following Month</fullName>
            </value>
            <value>
                <fullName>90 Days</fullName>
            </value>
            <value>
                <fullName>120 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>