force-app/main/default/objects/Quote/fields/Payment_Terms_formula__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms_formula__c</fullName>
    <formula>TEXT(QuoteAccount.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>