force-app/main/default/objects/Quote/fields/Pending_Instructions_Count__c.field-meta.xml
<CustomField>
    <fullName>Pending_Instructions_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Count of Special Instruction records with Status = Pending for this Quote. Maintained by SpecialInstruction_AfterSave_UpdateQuoteCount flow. Used by VR to gate Quote acceptance.</description>
    <inlineHelpText>Number of pending special instructions awaiting Finance acknowledgment.</inlineHelpText>
    <label>Pending Instructions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>