force-app/main/default/objects/Quote/fields/Platform_Manager__c.field-meta.xml
<CustomField>
    <fullName>Platform_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Platform Manager copied from the related Site. Approver for Deal Review when Account Type = Platform.</description>
    <inlineHelpText>Platform Manager for this quote, inherited from the Site. Approves the quote when Account Type is Platform.</inlineHelpText>
    <label>Platform Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Platform_Manager</relationshipName>
    <type>Lookup</type>
</CustomField>