force-app/main/default/objects/Quote/fields/Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>Quote_Currency__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Currency</label>
    <type>Text</type>
</CustomField>