force-app/main/default/objects/Quote/fields/Quote_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Type__c</fullName>
    <description>Quote type drives Order.Order_Type__c mapping. New = New Service. Amendment (Termination reason) = Termination. Amendment (other) = Change_Upsell. Renewal = Renewal.</description>
    <inlineHelpText>The type of commercial action this quote represents. Drives the Order type on SOF acceptance: New creates a New Service order, Amendment creates a Change order, Renewal creates a Renewal order.</inlineHelpText>
    <label>Quote Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
            <value>
                <fullName>Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>