force-app/main/default/objects/Quote/fields/Quote_Version__c.field-meta.xml
<CustomField>
    <fullName>Quote_Version__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Quote version number. Starts at 1. Incremented by F-17 Quote Revision Flow. Read-only - set by automation only.</description>
    <inlineHelpText>Quote version number, starting at 1. Incremented automatically each time the quote is revised. Read-only - do not edit manually.</inlineHelpText>
    <label>Version</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>