force-app/main/default/objects/Quote/fields/Ramp_Phases__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Phases__c</fullName>
    <description>Required when Is_Ramp_Deal__c = TRUE. Number of ramp delivery phases. Values 2-6. Drives how many Ramp Phase sets appear on Quote Lines.</description>
    <inlineHelpText>Required when Ramp Deal is checked. Enter the number of capacity delivery phases (2 to 6). Controls how many ramp phase columns appear on each quote line.</inlineHelpText>
    <label>Number of Ramp Phases</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>