force-app/main/default/objects/Quote/fields/Ramp_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Ramp_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TRUE if this quote includes a ramp schedule (incremental quantity over time).</description>
    <label>Ramp Schedule</label>
    <type>Checkbox</type>
</CustomField>