force-app/main/default/objects/Quote/fields/SBI_Finance_Approved__c.field-meta.xml
<CustomField>
    <fullName>SBI_Finance_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE by Country Finance during SBI approval step. Cannot be set by Sales. FLS hidden from Sales Reps. Required before Quote can advance past Under Review when SBI_Flag__c = TRUE.</description>
    <inlineHelpText>Checked by Country Finance once the Special Billing Instruction has been reviewed and approved. Hidden from Sales reps. The quote cannot advance to Accepted while SBI is pending.</inlineHelpText>
    <label>SBI Finance Approved</label>
    <type>Checkbox</type>
</CustomField>