force-app/main/default/objects/Quote/fields/SBI_Finance_Comments__c.field-meta.xml
<CustomField>
    <fullName>SBI_Finance_Comments__c</fullName>
    <description>Country Finance conditions, clarifications, or billing instructions. Required when SBI_Flag__c = TRUE and Finance has conditions. Passed in IP-1 payload alongside SBI_Notes__c.</description>
    <inlineHelpText>Finance team&apos;s conditions or clarifications on the approved Special Billing Instruction. Filled in by Country Finance during SBI review. Passed to Odoo with the order.</inlineHelpText>
    <label>SBI Finance Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>