force-app/main/default/objects/Quote/fields/Security_Deposit_Notes__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Notes__c</fullName>
    <description>Context for the security deposit requirement. Carried to the Special Instruction record.</description>
    <label>Security Deposit Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>