force-app/main/default/objects/Quote/fields/Security_Deposit_Required__c.field-meta.xml
<CustomField>
    <fullName>Security_Deposit_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, creates a Special Instruction for Finance indicating a security deposit is required before invoicing.</description>
    <inlineHelpText>Check if a security deposit is required for this deal. A Special Instruction will be created for Finance review.</inlineHelpText>
    <label>Security Deposit Required</label>
    <type>Checkbox</type>
</CustomField>