force-app/main/default/objects/Quote/fields/Service_Order_Terms__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Terms__c</fullName>
    <description>The Terms and Conditions printed on the binding Quote document. Required on all binding Quotes (Is_Binding__c = TRUE). Populated by Revenue Ops from standard GTC template. Read-only for Sales Reps. VR-QUOTE-06 blocks submission if blank when Is_Binding__c = TRUE.</description>
    <inlineHelpText>The GTC Terms and Conditions printed on the binding Quote document. Pre-populated by Revenue Ops from the standard template. Required on all binding quotes. Read-only for Sales reps.</inlineHelpText>
    <label>Service Order Terms</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>