force-app/main/default/objects/Quote/fields/Signed_SOF_Date__c.field-meta.xml
<CustomField>
    <fullName>Signed_SOF_Date__c</fullName>
    <description>Set by F-UploadDocument to TODAY() when Signed SOF is uploaded. Audit record of when the signed document was received.</description>
    <inlineHelpText>The date the signed Service Order Form was received. Set automatically when the document is uploaded via the Upload Document quick action. Do not edit manually.</inlineHelpText>
    <label>Signed SOF Date</label>
    <type>Date</type>
</CustomField>