force-app/main/default/objects/Quote/fields/Signed_SOF_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>Signed_SOF_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set TRUE by F-UploadDocument flow when Document_Type__c = Signed SOF is uploaded to Quote Files. Triggers F-15 (SOF Upload Handler - Order Creator). Always use the Upload Document Quick Action, not direct field edit.</description>
    <inlineHelpText>Checked automatically when a Signed SOF document is attached via the Upload Document quick action. Triggers Order creation. Do not check manually - always use the quick action.</inlineHelpText>
    <label>Signed SOF Uploaded</label>
    <type>Checkbox</type>
</CustomField>