force-app/main/default/objects/Quote/fields/Target_BAN__c.field-meta.xml
<CustomField>
    <fullName>Target_BAN__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional second BAN for split billing. When set, triggers SBI_Flag__c = TRUE.</description>
    <label>Target BAN (Alternate)</label>
    <referenceTo>BillingAccount__c</referenceTo>
    <relationshipLabel>Quotes (Target BAN)</relationshipLabel>
    <relationshipName>Quotes_Target_BAN</relationshipName>
    <type>Lookup</type>
</CustomField>