force-app/main/default/objects/Quote/fields/Target_Site__c.field-meta.xml
<CustomField>
    <fullName>Target_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the canonical Site__c record for this quote. Drives pricebook assignment and currency. Replaces the Operation_Site__c picklist.</description>
    <inlineHelpText>Link to the Digital Edge site record for this quote. Drives pricebook and billing currency.</inlineHelpText>
    <label>Operation Site</label>
    <referenceTo>Site__c</referenceTo>
    <relationshipLabel>Quotes</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>