force-app/main/default/objects/Quote/fields/Tax_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Tax_Treatment__c</fullName>
    <description>Tax treatment for this Quote. Auto-set from DE_Contracting_Entity__c. Determines which Odoo tax rules apply. Included in IP-1 payload.</description>
    <inlineHelpText>Tax regime that applies to this quote, auto-set from the DE Contracting Entity. Determines how Odoo applies tax to invoices. Read-only - contact Finance if incorrect.</inlineHelpText>
    <label>Tax Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard VAT</fullName>
            </value>
            <value>
                <fullName>Reverse Charge</fullName>
            </value>
            <value>
                <fullName>Exempt</fullName>
            </value>
            <value>
                <fullName>Withholding Tax</fullName>
            </value>
            <value>
                <fullName>Zero Rated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>