force-app/main/default/objects/Quote/fields/Total_MRC_2__c.field-meta.xml
<CustomField>
    <fullName>Total_MRC_2__c</fullName>
    <description>FB-798: replaces Total_MRC__c (deleted was a Roll-Up Summary, which Salesforce
        does not allow converting to Currency in place). Apex-calculated (QuoteMrcRollupService,
        via QuoteLineItemTriggerHandler), ramp-phase aware  see QuoteMrcRollupService for the
        calculation rules. Used in credit limit check and commission forecast.</description>
    <inlineHelpText>Sum of recurring monthly charges across quote lines, ramp-phase aware. Auto-calculated from line items on every save - do not edit manually. Used for TCV calculation and credit limit validation.</inlineHelpText>
    <label>Total MRC (Quote)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>