force-app/main/default/objects/Quote/fields/Total_NRC__c.field-meta.xml
<CustomField>
    <fullName>Total_NRC__c</fullName>
    <description>Roll-up sum of NRC_Amount__c across all Quote Lines. NRC_Amount__c formula returns $0 for non-NRC lines, so this sums only one-time charges. Used in NRC credit limit check.</description>
    <inlineHelpText>Sum of all one-time charges across quote lines. Auto-calculated from line items (UnitPrice x Quantity for NRC lines). Used for NRC credit limit validation. Read-only.</inlineHelpText>
    <label>Total NRC (Quote)</label>
    <summarizedField>QuoteLineItem.NRC_Amount__c</summarizedField>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>