force-app/main/default/objects/Quote/validationRules/Validation_Rule_For_RDD.validationRule-meta.xml
<ValidationRule>
    <fullName>Validation_Rule_For_RDD</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(Status),
ISPICKVAL(PRIORVALUE(Status), &apos;Presented&apos;),
ISPICKVAL(Status, &apos;Accepted&apos;),
ISBLANK(RDD__c)
)</errorConditionFormula>
    <errorMessage>Requested Delivery Date (RDD) is required before this quote can be Accepted. This quote cannot proceed to Accepted without a valid RDD please set it before submitting again.</errorMessage>
</ValidationRule>