force-app/main/default/objects/Quote/validationRules/VR_QUOTE_03_SBI_Pending_On_Accept.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QUOTE_03_SBI_Pending_On_Accept</fullName>
    <active>true</active>
    <description>VR-QUOTE-03: Quote cannot be Accepted if there are pending Special Instructions awaiting Finance acknowledgment.</description>
    <errorConditionFormula>AND(ISPICKVAL(Status, &apos;Accepted&apos;), NOT(ISPICKVAL(PRIORVALUE(Status), &apos;Rejected&apos;)), Pending_Instructions_Count__c &gt; 0)</errorConditionFormula>
    <errorDisplayField>Status</errorDisplayField>
    <errorMessage>This Quote has pending Special Instructions that must be acknowledged by Finance before it can be Accepted.</errorMessage>
</ValidationRule>