force-app/main/default/objects/Quote/validationRules/VR_QUOTE_16_BAN_Account_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QUOTE_16_BAN_Account_Match</fullName>
    <active>false</active>
    <description>Blocks selecting a BAN that belongs to a different Account than the Quote. Mirrors VR_QUOTE_08 (subsidiary) for Account. Uses Opportunity.AccountId (Quote.AccountId is not formula-accessible). Added 2026-06-15.</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(BillingAccount__c)),
    NOT(ISBLANK(Opportunity.AccountId)),
    NOT(ISBLANK(BillingAccount__r.Account__c)),
    Opportunity.AccountId &lt;&gt; BillingAccount__r.Account__c
)</errorConditionFormula>
    <errorDisplayField>BillingAccount__c</errorDisplayField>
    <errorMessage>The BAN&apos;s Account must match the Quote&apos;s Account. Select a BAN that belongs to the same account as this Quote.</errorMessage>
</ValidationRule>