force-app/main/default/objects/Quote/validationRules/VR_QUOTE_18_CurrencyMatchesSubsidiary.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_QUOTE_18_CurrencyMatchesSubsidiary</fullName>
    <active>true</active>
    <description>VR-QUOTE-18: Quote currency must be the subsidiary&apos;s Operation Country local currency (country map) or USD. Rebased off the subsidiary currency field so USD-billing entities in non-USD countries pass.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(DE_Entity__c)),
  TEXT(CurrencyIsoCode) &lt;&gt; CASE(TEXT(DE_Entity__r.Operation_Country__c),
    &quot;China&quot;, &quot;CNY&quot;,
    &quot;India&quot;, &quot;INR&quot;,
    &quot;Indonesia&quot;, &quot;IDR&quot;,
    &quot;Japan&quot;, &quot;JPY&quot;,
    &quot;Korea&quot;, &quot;KRW&quot;,
    &quot;South Korea&quot;, &quot;KRW&quot;,
    &quot;Hong Kong&quot;, &quot;HKD&quot;,
    &quot;Singapore&quot;, &quot;SGD&quot;,
    &quot;Malaysia&quot;, &quot;MYR&quot;,
    &quot;Philippines&quot;, &quot;PHP&quot;,
    &quot;Thailand&quot;, &quot;THB&quot;,
    &quot;USD&quot;),
  TEXT(CurrencyIsoCode) &lt;&gt; &quot;USD&quot;
)</errorConditionFormula>
    <errorDisplayField>CurrencyIsoCode</errorDisplayField>
    <errorMessage>Quote Currency must be the operation country&apos;s local currency or USD. Set the Quote Currency to the local currency or USD while the quote is in Draft.</errorMessage>
</ValidationRule>